--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ version: "3.4"
 services:
   gaben:    
     container_name: gaben
+    env_file:
+      - .env
     build:      
       context: .
       dockerfile: ./Dockerfile
