--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - EVENTSTORE_HTTP_PORT=2113
       - EVENTSTORE_HTTP_PORT_ADVERTISE_AS=443
       - EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP=true
+      - EVENTSTORE_PROJECTION_EXECUTION_TIMEOUT=1000
     ports:
       - "1113:1113"
       - "2113:2113"
